# newproject1

./: .editorconfig  .gitignore  .prettierignore  estrutura.excalidraw  manage.py  pyproject.toml  teste.js
base_templates/: home.html
core/: __init__.py  urls.py
core/settings/: base.py  prod.py
recipes/: admin.py  models.py  teste.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/static/recipes/css/: styles.css
recipes/templates/recipes/: base.html
recipes/templates/recipes/pages/: home.html  recipe-view.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  recipe-card.html  search.html
recipes/templates/temp/: temp.html
